# Cobalt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: CobaltConfig.cmake.in  CobaltFunctions.cmake
include/cobalt/: cobalt.h  cobalt.hpp
include/cobalt/control/: control.hpp
include/cobalt/control/controller/: controller.hpp  pid.hpp
include/cobalt/hal/: hal.hpp
include/cobalt/hal/gpio/: gpio_arduino.hpp  gpio_base.hpp  gpio_esp32.hpp  gpio_espidf.hpp
include/cobalt/hal/i2c/: i2c_arduino.hpp  i2c_base.hpp  i2c_espidf.hpp
include/cobalt/hal/timer/: timer.hpp
include/cobalt/kinematics/: joint.hpp  kinematics.hpp  link.hpp  robot_chain.hpp
include/cobalt/kinematics/robots/: robot_dog.hpp
include/cobalt/math/: math.hpp
include/cobalt/math/algebra/complex/: complex.hpp  complex_ops.hpp  complex_util.hpp
include/cobalt/math/geometry/: geometry.hpp
include/cobalt/math/geometry/quaternion/: quaternion.hpp  quaternion_ops.hpp  quaternion_util.hpp
include/cobalt/math/geometry/transform/: transform.hpp  transform_ops.hpp
include/cobalt/math/linear_algebra/: linear_algebra.hpp
include/cobalt/math/linear_algebra/matrix/: matrix.hpp  matrix_ops.hpp  matrix_util.hpp
include/cobalt/math/linear_algebra/vector/: vector.hpp  vector_ops.hpp  vector_util.hpp
include/cobalt/util/: util.hpp
include/cobalt/util/meta/: build_info.hpp  cobalt_info.hpp  platform_info.hpp
results/control/: pid_test.csv  wind_up.csv
scripts/control/: pid_plotter.py  wind_up_plotter.py
src/: debug.cpp
src/control/controller/: pid.cpp
src/hal/gpio/: gpio_arduino.cpp  gpio_espidf.cpp
src/hal/i2c/: i2c_arduino.cpp  i2c_espidf.cpp
src/hal/timer/: timer_arduino.cpp  timer_espidf.cpp
tests/: CMakeLists.txt  sanity_test.cpp
tests/control/controller/: pid_test.cpp
tests/kinematics/: kinematics_test.cpp
tests/math/algebra/: complex_test.cpp
tests/math/geometry/: quaternion_test.cpp  transform_test.cpp
tests/math/linear_algebra/: complex_vector_test.cpp  matrix_test.cpp  vector_test.cpp
tests/util/: meta_test.cpp
tools/kinematics/: pio_run_rob_parser.py  rob_parser.py  test.rob
tools/kinematics/robots/: arm_2r.rob  robot_dog.rob
